--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,14 +10,12 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-
     lintOptions {
         checkReleaseBuilds false
         // Or, if you prefer, you can continue to check for errors in release builds,
         // but continue the build even when errors are found:
         abortOnError false
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -28,17 +26,17 @@ android {
             debuggable true
         }
     }
-
     repositories {
         maven {
             url "https://s3.amazonaws.com/repo.commonsware.com"
         }
         maven { url 'https://oss.sonatype.org/content/repositories/ksoap2-android-releases' }
     }
+    buildToolsVersion '27.0.3'
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
@@ -55,6 +53,4 @@ dependencies {
     compile 'com.android.volley:volley:1.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jsibbold:zoomage:1.1.0'
-
-
 }
