--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="aleris.com.iqranehruvihardl">
+    package="aleris.com.iqranehruvihardll">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -17,7 +17,10 @@
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -45,70 +48,113 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:ignore="HardcodedDebugMode">
-        <activity android:name=".Splash">
+        <activity
+            android:name=".Splash"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Content"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".Content"
+            android:screenOrientation="portrait" />
         <activity android:name=".Teacher" />
-        <activity android:name=".DashboardManager"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Login"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Attendance"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Homework"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Forgotpass"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Reception"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ResetPass"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Utils.CropActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".FeesStruct"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Reportcard"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".My_info"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Pdf"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Report_card"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Classmate"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Compose"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ReceptionRecord"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Bus"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".PasswordChange"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".AboutSchool"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".TeacherUpload"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".TimeTable"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Notice"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".FileDownload"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".TeacherInfo"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Downloader"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".example"
-            android:screenOrientation="portrait">
+        <activity
+            android:name=".DashboardManager"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Login"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Attendance"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Homework"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Forgotpass"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Reception"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ResetPass"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Utils.CropActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".FeesStruct"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Reportcard"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".My_info"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Pdf"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Report_card"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Classmate"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Compose"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ReceptionRecord"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Bus"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".PasswordChange"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".AboutSchool"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".TeacherUpload"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".TimeTable"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Notice"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".FileDownload"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".TeacherInfo"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Downloader"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".example"
+            android:screenOrientation="portrait" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
 
-        </activity>
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".Memories"></activity>
     </application>
 
 </manifest>
